--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ window.onload=function(){
 <img src="img/favicon.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, 300px"alt="" class="logoimg"/>
 <div class="heroline"></div>
 <div class="subherotext"></div>
-<div style="color: rgb(34, 168, 202);background-color: black;line-height: 25px;font-size: 40px;padding: 50px 100px 50px 100px;border-radius: 200px;" class="text-white light-typeface text-height-1-4 split-text"> <span> <strong>OKAY HERE'S THE CA:</strong></span><br/><br/><br/>0x...</div><div class="socialwrapper">
+<div style="color: rgb(34, 168, 202);background-color: black;line-height: 25px;font-size: 40px;padding: 50px 100px 50px 100px;border-radius: 200px;" class="text-white light-typeface text-height-1-4 split-text"> <span> <strong>OKAY HERE'S THE CA: </strong></span><br/><br/><br/>0xBFBDe94Af7EF6CCF62fA3B2813032718c3708ec7</div><div class="socialwrapper">
 <div class="div-block-16">
   
   <img src="img/okay-hi.gif">
@@ -80,8 +80,8 @@ window.onload=function(){
 <div class="div-block-4">
   <a href="https://t.me/okayportal" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79.png" loading="lazy" sizes="50px" srcset="https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79-p-500.png 500w, https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79-p-800.png 800w, https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79-p-1080.png 1080w, https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79-p-1600.png 1600w, https://assets.website-files.com/63401910866c8409e3d7ec41/6479641b90128cb356e868c4_telegram-icon-2048x2048-qq8ggh79.png 2048w" alt="" class="yticon"/></a>
   <a href="https://x.com/okaycoinerc" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/63401911866c846e22d7ec5f_Twitter.svg" loading="lazy" alt="" class="twittericon"/></a>
-  <a href="https://dexscreener.com/ethereum/" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/634019467777b67dc747db46_dextools.png" loading="lazy" alt="" class="tiktokicon"/></a>
-  <a href="https://etherscan.io/address/" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/634019551f2f0239f116707b_etherscanlogo.png" loading="lazy" alt="" class="instagramicon"/></a>
+  <a href="https://dexscreener.com/ethereum/0xBFBDe94Af7EF6CCF62fA3B2813032718c3708ec7" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/634019467777b67dc747db46_dextools.png" loading="lazy" alt="" class="tiktokicon"/></a>
+  <a href="https://etherscan.io/address/0x94231b2b3ba4f657a21171569864a43bf29ebc9b" target="_blank" class="w-inline-block"><img src="https://assets.website-files.com/63401910866c8409e3d7ec41/634019551f2f0239f116707b_etherscanlogo.png" loading="lazy" alt="" class="instagramicon"/></a>
 </div>
 </div>
 <a href="index.html#" class="link-block w-inline-block"><div class="contentblockwrapper"><div class="contentblocksubhead"></div>
